Add Unix install target and support for --appdir parameter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,12 +31,46 @@ target_link_libraries(
    ${EXECUTABLE_NAME} 
    OpenGL::GL 
    portaudio_static
-   portmidi 
+   portmidi
+   ProgramOptions 
    sfml-graphics
    sfml-window
    sfml-system
    SimpleIni 
-   tinyfiledialogs)
+   tinyfiledialogs
+   whereami)
 
 add_custom_command( TARGET ${EXECUTABLE_NAME} POST_BUILD COMMAND 
   ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_SOURCE_DIR}/resources ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+
+if (UNIX)
+  set(INSTALL_BASEDIR "${CMAKE_INSTALL_PREFIX}/share/fmcomposer")
+
+  install(PROGRAMS "$<TARGET_FILE:${EXECUTABLE_NAME}>" DESTINATION "${CMAKE_INSTALL_PREFIX}/bin" RENAME "fmcomposer.bin")
+  install(FILES "${CMAKE_SOURCE_DIR}/fmcomposer.png"
+          DESTINATION "${CMAKE_INSTALL_PREFIX}/share/pixmaps")
+
+  install(PROGRAMS "${CMAKE_SOURCE_DIR}/fmcomposer.sh" DESTINATION "${CMAKE_INSTALL_PREFIX}/bin" RENAME "fmcomposer")
+  install(FILES "${CMAKE_SOURCE_DIR}/fmcomposer.desktop"
+          DESTINATION "${CMAKE_INSTALL_PREFIX}/share/applications")
+
+  # Update launch script/desktop file with path information
+  install(CODE "file(APPEND \"${CMAKE_INSTALL_PREFIX}/bin/fmcomposer\" \"\nexec \\\"${CMAKE_INSTALL_PREFIX}/bin/fmcomposer.bin\\\" \\\"$@\\\" \\\"--appdir\\\" \\\"${INSTALL_BASEDIR}\\\"\n\")")
+  install(CODE "file(APPEND \"${CMAKE_INSTALL_PREFIX}/share/applications/fmcomposer.desktop\" \"\nExec=\\\"${CMAKE_INSTALL_PREFIX}/bin/fmcomposer.bin\\\" \\\"$@\\\" \\\"--appdir\\\" \\\"${INSTALL_BASEDIR}\\\"\")")
+  install(CODE "file(APPEND \"${CMAKE_INSTALL_PREFIX}/share/applications/fmcomposer.desktop\" \"\nIcon=\"${CMAKE_INSTALL_PREFIX}/share/pixmaps/fmcomposer.png\"\n\")")
+
+  install(
+    DIRECTORY "${CMAKE_SOURCE_DIR}/resources/instruments"
+              "${CMAKE_SOURCE_DIR}/resources/songs"
+              "${CMAKE_SOURCE_DIR}/resources/themes"
+    DESTINATION ${INSTALL_BASEDIR}
+    CONFIGURATIONS Release
+  )
+  install(
+      FILES "${CMAKE_SOURCE_DIR}/resources/defaultkeyboards.ini"
+            "${CMAKE_SOURCE_DIR}/resources/gmlist.ini"
+            "${CMAKE_SOURCE_DIR}/resources/readme.txt"  
+      DESTINATION "${INSTALL_BASEDIR}"
+      CONFIGURATIONS Release
+    )
+endif()
