--- a/src/mudtracker.desktop
+++ b/src/mudtracker.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=FMComposer
+Name=MUDTracker
 Comment=Music and sound creation tool, featuring an FM synthesizer and a tracker-like interface
 Terminal=false
 Type=Application
