--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,9 +39,9 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: fmcomposer-linux
+        name: mudtracker-linux
         path: |
-          ${{github.workspace}}/build/bin/FMComposer
+          ${{github.workspace}}/build/bin/MUDTracker
           ${{github.workspace}}/build/bin/LICENSE
           ${{github.workspace}}/build/bin/defaultkeyboards.ini
           ${{github.workspace}}/build/bin/gmlist.ini
@@ -61,9 +61,9 @@ jobs:
         run: cmake --build build --config ${{env.BUILD_TYPE}}
       - uses: actions/upload-artifact@v4
         with:
-          name: fmcomposer-win64
+          name: mudtracker-win64
           path: |
-            build/bin/FMComposer.exe
+            build/bin/MUDTracker.exe
             build/bin/LICENSE
             build/bin/*.dll
             build/bin/defaultkeyboards.ini
